# PrincessesTriangle

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  flake.nix  shader.frag  shader.vert  shader2.frag  shader2.vert  shader_compiler.bat  vertex2.spv
Vulkan-Headers-sdk-1.3.250.1/include/vulkan/: vk_icd.h
Vulkan-Loader-sdk-1.3.250.1/: CMakeLists.txt
Vulkan-Loader-sdk-1.3.250.1/loader/: trampoline.c
src/: FragShader.frag  Renderer.cpp  Renderer.h  graphics.cpp  graphics.h  main.cpp  resources.cpp  resources.h  window.cpp  window.h
src/shaders/: FragShader.frag  VertShader.vert
